Refactor CommandManagerClient postCommand() method
Update postCommand to set the authentication headers

Add command manager authentication fields to PluginSettings

Add test keystore value